# rs-llm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: config.json
rs_llm/: dummie.py  main.py
rs_llm/loader/: pdf_loader.py
rs_llm/log/: logger.py
rs_llm/pricing/: token.py
rs_rag/: Cargo.toml
rs_rag/src/: embeddings.rs  lib.rs  semantic_chunker.rs
